initial approach to adding failure reason
